@@ -1,4 +1,10 @@
 2005-04-05 J.R. Heisey <jrheisey@sourceforge.com>
+	* src/value.h, src/registers.cc,h, src/processor.cc.h,
+	src/preakpoints.cc,h, plat/win32/gpsim.def: Implemented
+	classes and functions for displaying the register address
+	and possible value for break on read and break on write.
+
+2005-04-05 J.R. Heisey <jrheisey@sourceforge.com>
 	* gpsim/main.cc, src/interface.cc, src/gpsim_interface.h,
 	cli/cmd_manager.h: Added code to support for an external module to
 	access the global ISimConsole object from the Interface class.
